# murmur

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/murmur-cli/src/: main.rs
crates/murmur-dag/: Cargo.toml
crates/murmur-dag/src/: error.rs  lib.rs  state.rs
crates/murmur-desktop/: Cargo.toml
crates/murmur-desktop/src/: app.rs  daemon.rs  helpers.rs  main.rs  message.rs  networking.rs  storage.rs  style.rs  update.rs
crates/murmur-desktop/src/views/: activity.rs  conflicts.rs  devices.rs  folders.rs  mod.rs  network_health.rs  settings.rs  status.rs
crates/murmur-engine/: Cargo.toml
crates/murmur-engine/src/: callbacks.rs  engine.rs  error.rs  event.rs  lib.rs
crates/murmur-ffi/src/: lib.rs  networking.rs
crates/murmur-ipc/src/: lib.rs
crates/murmur-net/: Cargo.toml
crates/murmur-net/src/: lib.rs
crates/murmur-seed/: Cargo.toml
crates/murmur-seed/src/: lib.rs
crates/murmur-types/: Cargo.toml
crates/murmur-types/src/: lib.rs
crates/murmurd/: Cargo.toml
crates/murmurd/src/: config.rs  crypto.rs  http.rs  ignore.rs  main.rs  mdns.rs  metrics.rs  networking.rs  storage.rs  sync.rs  transfers.rs  watcher.rs
docs/: architecture.md  features.md  manual-testing.md  plan.md
scripts/: gui.sh  run-cli-tests.sh
tests/integration/: Cargo.toml  helpers.rs  scenarios.rs  three_device_topology.rs  two_device_sync.rs
tests/integration/src/: lib.rs
tests/manual/: android.md  cli-advanced.md  cli-basic.md  cli-intermediate.md  desktop.md
