[workspace]
members = [
    "crates/murmur-types",
    "crates/murmur-seed",
    "crates/murmur-dag",
    "crates/murmur-net",
    "crates/murmur-engine",
    "crates/murmurd",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared types
murmur-types = { path = "crates/murmur-types" }
murmur-seed = { path = "crates/murmur-seed" }
murmur-dag = { path = "crates/murmur-dag" }
murmur-net = { path = "crates/murmur-net" }
murmur-engine = { path = "crates/murmur-engine" }

# Core dependencies
blake3 = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
rand = "0.8"
bip39 = "2"
hkdf = "0.12"
sha2 = "0.10"
