[workspace]
members = [
    "crates/murmur-types",
    "crates/murmur-seed",
    "crates/murmur-dag",
    "crates/murmur-net",
    "crates/murmur-engine",
    "crates/murmur-ipc",
    "crates/murmur-cli",
    "crates/murmurd",
    "crates/murmur-desktop",
    "crates/murmur-ffi",
    "tests/integration",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared types
murmur-types = { path = "crates/murmur-types" }
murmur-seed = { path = "crates/murmur-seed" }
murmur-dag = { path = "crates/murmur-dag" }
murmur-net = { path = "crates/murmur-net" }
murmur-engine = { path = "crates/murmur-engine" }

# Core dependencies
blake3 = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core", "zeroize"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
rand = "0.10"
bip39 = "2"
hkdf = "0.12"
sha2 = "0.10"
iroh = "0.97"
iroh-gossip = "0.97"
bytes = "1"
futures-lite = "2"

# Desktop / server only
dirs = "6"
fjall = "3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
zeroize = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
flate2 = "1"
hex = "0.4"
murmur-ipc = { path = "crates/murmur-ipc" }
murmur-ffi = { path = "crates/murmur-ffi" }
serde_json = "1"
prometheus = "0.14"
axum = "0.8"
mdns-sd = "0.18"
hostname = "0.4"
