[package]
name = "murmur-dag"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-types = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
