[package]
name = "murmur-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-types = { workspace = true }
murmur-seed = { workspace = true }
murmur-dag = { workspace = true }
murmur-engine = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fjall = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
iced = { version = "0.14", features = ["tokio"] }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
