[package]
name = "murmur-engine"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-types = { workspace = true }
murmur-dag = { workspace = true }
murmur-net = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
