[package]
name = "murmur-seed"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-types = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bip39 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
