[package]
name = "murmurd"
version.workspace = true
edition.workspace = true

[features]
metrics = ["dep:prometheus", "dep:axum", "dep:serde_json"]

[dependencies]
murmur-types = { workspace = true }
murmur-seed = { workspace = true }
murmur-dag = { workspace = true }
murmur-engine = { workspace = true }
murmur-net = { workspace = true }
murmur-ipc = { path = "../murmur-ipc" }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = { workspace = true }
futures-lite = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fjall = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
prometheus = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
mdns-sd = { workspace = true }
hostname = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }

[dependencies.rand]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
